load-tests/interceptors_passthrough/deployment/interceptors-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interceptors-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interceptors-backend
  template:
    metadata:
      labels:
        app: interceptors-backend
        logs: "true"
    spec:
      containers:
      - name: interceptors-container
        image: ktharmi176/interceptor-service:latest
        ports:
        - containerPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: interceptors
spec:
  type: ClusterIP
  ports:
  - port: 9090
  selector:
    app: interceptors-backend
