load-tests/interceptors_passthrough/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interceptors
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bal.perf.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: interceptors-pa
            port:
              number: 9091
